--- a/IGH/templates/home_admin.html
+++ b/IGH/templates/home_admin.html
@@ -9,17 +9,17 @@
     <div class="container">
        <h1>IGH</h1>
       <br>
-      Hello, {{name}}
+      Hello, {{email}}
 
-      <form action="{{ url_for('user_details') }}" >
+      <form action="{{ url_for('view_users') }}" >
          Check existing user list:
-        <input class="btn btn-default" type="submit" value="User_details">
+        <input class="btn btn-default" type="submit" value="View_users">
       </form>
       <form action="{{ url_for('create_new_user') }}" method="GET">
          Create new user:
         <input class="btn btn-default" type="submit" value="create_user" >
       </form>
-      <form action="{{ url_for('edit_profile') }}" method="post">
+      <form action="{{ url_for('edit_profile', email=email ) }}" method="post">
          Edit your profile:
         <input class="btn btn-default" type="submit" value="edit_profile">
       </form>
