--- a/IGH/templates/user_profile.html
+++ b/IGH/templates/user_profile.html
@@ -17,7 +17,7 @@ user: {{ user_details['name'] }}
   <div>
   <input type="submit" name = 'action' value="update">
   <input type="submit" name = 'action' value="delete">
-  <input type="submit" name = 'action' value="update_credential">
+  <input type="submit" name = 'action' value="edit_credential">
   </div>
 </form> 
 
