insta user profile implemented

--- a/IGH/templates/edit_credential.html
+++ b/IGH/templates/edit_credential.html
@@ -23,7 +23,7 @@
 	</select>
         {% endif %}
          <br><br><br>
-        <input class="btn btn-default" type="submit" value="Create">
+        <input class="btn btn-default" type="submit" value="Change">
       </form>  
        <br> <br> <br> <br>
       {% if message %}
