--- a/IGH/templates/home.html
+++ b/IGH/templates/home.html
@@ -9,18 +9,18 @@
     <div class="container">
        <h1>IGH</h1>
       <br>
-      Hello, {{name}}
+      Hello, {{email}}
 
-      <form action="{{ url_for('user_details') }}" >
-         check user list:
-        <input class="btn btn-default" type="submit" value="User_details">
+      <form action="{{ url_for('view_users') }}" >
+         Check existing instagram user list:
+        <input class="btn btn-default" type="submit" value="View_users">
       </form>
-      <form action="{{ url_for('create_user') }}" method="post">
-         check user list:
+      <form action="{{ url_for('create_new_user') }}" method="GET">
+         Add new instagram user:
         <input class="btn btn-default" type="submit" value="create_user" >
       </form>
-      <form action="{{ url_for('edit_profile') }}" method="post">
-         check user list:
+      <form action="{{ url_for('edit_profile', email = email ) }}" method="GET">
+         Edit your profile:
         <input class="btn btn-default" type="submit" value="edit_profile">
       </form>
       {% if error %}
